<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1E1D1D"
    tools:context=".BmiActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:id="@+id/centerverticalline">

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/male"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="23dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="35dp"
        android:layout_toStartOf="@id/centerverticalline"
        android:background="@drawable/cardbackgroung">

        <ImageView
            android:layout_width="170px"
            android:layout_height="170px"
            android:layout_above="@id/textmale"
            android:layout_centerInParent="true"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/male">

        </ImageView>

        <TextView
            android:id="@+id/textmale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/raleway"
            android:text="@string/male"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold">

        </TextView>


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginBottom="35dp"
        android:layout_marginRight="20dp"
        android:layout_toEndOf="@id/centerverticalline"
        android:background="@drawable/cardbackgroung"
        android:layout_marginLeft="20dp"
        android:id="@+id/female">

        <ImageView
            android:layout_width="170px"
            android:layout_height="170px"
            android:layout_centerInParent="true"
            android:layout_above="@id/textfemale"
            android:layout_marginBottom="20dp"
            android:src="@drawable/female"
            android:contentDescription="@string/todo">

        </ImageView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:text="@string/femaletext"
            android:id="@+id/textfemale"
            android:textStyle="bold"
            android:fontFamily="@font/raleway"
            android:textAlignment="center"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp">

        </TextView>


    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/centerhorizontalline"
        android:layout_below="@+id/female"
        android:layout_centerInParent="true">

        <LinearLayout
            android:id="@+id/activity_mains"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:gravity="center_horizontal"
                android:text="@string/weight"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/weight"
                android:layout_width="185dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:ems="6"
                android:digits="012345789"
                android:hint="weight in kg"
                android:inputType="number|numberDecimal"
                android:paddingLeft="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/light"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:gravity="center_horizontal"
                android:text="@string/height"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/height"
                android:layout_width="187dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:digits="012345789"
                android:ems="6"
                android:hint="height in cm"
                android:inputType="number|numberDecimal"
                android:paddingLeft="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/light"
                android:textSize="20sp" />

            <Button
                android:id="@+id/calc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="25dp"
                android:onClick="calculateBMI"
                android:text="calculateBMI" />

            <TextView
                android:id="@+id/result"
                android:layout_width="match_parent"
                android:layout_height="214dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="25dp"
                android:background="@drawable/violet"
                android:gravity="center_horizontal"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </LinearLayout>
    </RelativeLayout>



</RelativeLayout>